test/TestSuite/Syntax/Errors/operand_unkn_flag.tjp
project test "Test" "1.0" 2007-08-19 +2m 

task t "T" {
  start 2007-08-19
}

export "report.tji" {
# MARK: error 9 operand_unkn_flag
	hidetask foo
}

